# DRG

./: .cursorrules  .env.example  .gitignore  INSTALL_SPACY.md  LICENSE  QUICK_START.md  RAG_STATUS.md  RATE_LIMIT_HANDLING.md  README.md  README_API.md  RESTART_SERVER.md  SETUP.md  pyproject.toml  quick_start.sh  requirements.txt  restart_api_server.sh  start_api_server.sh  test_demo.py
docs/: PROJECT_OVERVIEW.md  PROJECT_OVERVİEW.md  ProjectOverview.md  chunking_strategy.md  clustering_summarization.md  community_report_structure.md  drg_search.md  kg_generation.md  mcp_integration.md  multi_dataset_evaluation.md  pipeline_overview.md  problem_durum_raporu.md  relationship_model.md  schema_design.md  semantic_retrieval_design.md  sorunlar.md  visualization_options.md
drg/: __init__.py  cli.py  config.py  coreference_resolution.py  entity_resolution.py  extract.py  graph.py  mcp_api.py  optimize.py  schema.py
drg/api/: __init__.py  server.py
drg/api/templates/: index.html
drg/chunking/: __init__.py  strategies.py  validators.py
drg/clustering/: __init__.py  algorithms.py  summarization.py
drg/embedding/: __init__.py  providers.py
drg/graph/: __init__.py  auto_clusters.py  builders.py  community_report.py  hub_mitigation.py  kg_core.py  neo4j_exporter.py  query_engine.py  relationship_model.py  schema_generator.py  visualization.py  visualization_adapter.py
drg/optimizer/: __init__.py  metrics.py  optimizer.py
drg/retrieval/: __init__.py  drg_search.py  graphrag.py  hybrid.py  rag.py
drg/utils/: env_loader.py  llm_throttle.py
drg/vector_store/: __init__.py  chroma.py  factory.py  faiss.py  interface.py  pinecone.py  qdrant.py
examples/: README.md  api_server_example.py  document_to_kg_workflow.py  enhanced_schema_example.py  full_pipeline_example.py  graphrag_pipeline_example.py  law_example.py  long_text_example.py  mcp_demo.py  optimizer_demo.py  optimizer_example.py  papers.md  pipeline_example.py  simple_example.py
inputs/: 1example_schema_legacy.json  2example_text.txt  3example_schema.json  4example_schema.json
outputs/: 1example_community_reports.json  1example_kg.json  1example_schema.json  1example_summary.json  3example_community_reports.json  3example_kg.json  3example_schema.json  3example_summary.json  4example_community_reports.json  4example_kg.json  4example_schema.json  4example_summary.json  example1.json  example3.json  example4.json  law_example.json  run_output.json
tests/: conftest.py  test_anchor_selection.py  test_basic.py  test_coreference_safety.py  test_cross_chunk_snippets.py  test_entity_resolution_safety.py  test_extract_mock.py  test_extraction_functionality.py  test_implicit_relations.py  test_integration.py  test_kgedge_export.py  test_long_text.py  test_relation_metadata_heuristics.py  test_schema_parsing.py  test_schema_sampling.py
tests/multi_dataset/: __init__.py  evaluation.py
